--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -8,4 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo "Hello world"
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 13
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - run: mvn -B test --file pom.xml
