--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -18,4 +18,5 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - run: mvn -B test --file pom.xml
-      - run: mvn surefire:test 
+      - run: mvn surefire:test
+      - run: mvn surefire-report:report
